objects/Visit_Report__c.object
<CustomObject>
    <description>This object holds the Visit Reports which will be attached to Accounts and can be linked to Opportunities &amp; Attendees</description>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Year_Date_Format__c</fullName>
        <formula>Account_Plan__r.Account_Plan_Year_Date_Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Year (Date Format)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship with Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Business_Review_Status__c</fullName>
        <formula>IF (OR(ISPICKVAL( Channel_Review__r.Status__c , &apos;Obsolete&apos;), 
ISPICKVAL( Channel_Review__r.Status__c , &apos;Completed&apos;)), &apos;Closed&apos;, TEXT(Channel_Review__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Business Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Authorization</label>
        <referenceTo>Channel_Partner_Authorization__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan_Status__c</fullName>
        <formula>IF ( (TEXT(Joint_Business_Plan__r.Status__c) == &apos;Closed&apos; || TEXT(Joint_Business_Plan__r.Status__c) == &apos;Obsolete&apos;), &apos;Closed&apos;, TEXT(Joint_Business_Plan__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Pre_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Pre-Qualification</label>
        <referenceTo>Channel_Qualifications__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Qualification_Status__c</fullName>
        <formula>IF (OR( ISPICKVAL( Channel_Pre_Qualification__r.Status__c , &apos;Obsolete&apos;), ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Declined&apos;), 
ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Completed&apos;) ), &apos;Closed&apos;, TEXT(Channel_Pre_Qualification__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Qualification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The information on this Visit Report should not be shared externally</inlineHelpText>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_after_opportunity__c</fullName>
        <description>Created for RKD 4.0 for Visit report productivity</description>
        <formula>CreatedDate &gt; Opportunity__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created after opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_Year__c</fullName>
        <formula>YEAR( DATEVALUE(  End_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>R6</description>
        <label>End Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Source_System__c</fullName>
        <description>Use to track the list of systems which throw integration can generate that particular data entry</description>
        <label>External Source System</label>
        <picklist>
            <picklistValues>
                <fullName>ATURB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_User_Type__c</fullName>
        <description>Created as part of R2.0 to hold partner owner type</description>
        <globalPicklist>External_User_Type</globalPicklist>
        <label>External User Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Channel Partner management</description>
        <formula>CASE( Owner:User.Profile.Name, 
$Label.SYS_ABBExtChannelPartnerCommunityUser, $Label.SYS_Ext_Channel_Partner, 
$Label.SYS_ABB_Ext_Agent_Community_User, $Label.SYS_Ext_Agent , 
$Label.SYS_ABB_Ext_Rep_Community_User, $Label.SYS_Ext_Support,$Label.SYS_Created_by_ABB)</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <description>GUID used for ATURB interface to populate the account lookup field based on the GUID value found</description>
        <label>GUID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comment__c</fullName>
        <inlineHelpText>This field is for internal comments only and should not be shared externally</inlineHelpText>
        <label>Internal Comment</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Visit_Report_Available__c</fullName>
        <description>This field is for reporting purpose and created as part of RKD 3.0 release and used in report % of Accounts without Visit Reports.</description>
        <formula>if(NOT(ISNULL(Name)),true,false)</formula>
        <label>Is Visit Report Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field created as part of R5-2576 to provide users with the ability to create visit reports from leads.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Where did the visit take place?</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Reason__c</fullName>
        <description>Release 2.0.1 REQ 1885</description>
        <label>Main Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Other Reason</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product\ Services Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Solution Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec and Influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product\ Quality Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Training</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Minutes__c</fullName>
        <label>Meeting Minutes</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Opportunity.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.Opportunity_RecordType__c</field>
                <operation>notEqual</operation>
                <value>Recurring Opportunity</value>
            </filterItems>
            <infoMessage>Please select the related opportunity from the list</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originating_Event_Id__c</fullName>
        <description>R6: This field will be populated the in the flow</description>
        <label>Originating Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Event_Name__c</fullName>
        <description>R6</description>
        <label>Originating Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Event_What_Id__c</fullName>
        <description>R6</description>
        <label>Originating Event What Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Event_Who_ID__c</fullName>
        <description>R6</description>
        <label>Originating Event Who ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Event__c</fullName>
        <formula>IF ( Originating_Event_Id__c != NULL, HYPERLINK(&quot;/&quot;&amp;  Originating_Event_Id__c, Originating_Event_Name__c, &quot;_self&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originating Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Host_Account_Name__c</fullName>
        <label>Partner Host Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>What was the reason for the visit?</inlineHelpText>
        <label>Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_Based_BU__c</fullName>
        <description>Created for RKD 4.0 Visit Reports Productivity Dashboards.</description>
        <formula>Owner:User.Role_Based_BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Based BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Based_Division__c</fullName>
        <description>Created for RKD 4.0 for Visit report productivity</description>
        <formula>Owner:User.Role_Based_Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Based Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Account_GUID__c</fullName>
        <formula>Account__r.Root_Account_GUID__c</formula>
        <label>Root Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <description>Stores Id of object from with Visit Report was created - used for duplicate control</description>
        <label>Source Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <description>Stores the ID form the source system of a record (used for data migration)</description>
        <label>Source System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Year__c</fullName>
        <formula>YEAR( DATEVALUE( Start_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Created as part of R6</description>
        <label>Start Date and Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Business_Unit_BU__c</fullName>
        <description>Created for RKD 4.0 Visit Reports Productivity Dashboards.</description>
        <formula>TEXT(Owner:User.Business_Unit_BU_HRGT__c)</formula>
        <label>User: Business Unit (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Division_DIV__c</fullName>
        <description>Created for RKD 4.0 Visit Reports Productivity Dashboards.</description>
        <formula>TEXT(Owner:User.Division_DIV_HRGT__c)</formula>
        <label>User: Division (DIV)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Product_Group_PG__c</fullName>
        <description>Created for RKD 4.0 Visit Reports Productivity Dashboards.</description>
        <formula>Owner:User.ProductGroupPGHRGTLabel__c</formula>
        <label>User: Product Group (PG)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Duration__c</fullName>
        <formula>(End_Date__c - Start_Date__c) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Duration (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Method__c</fullName>
        <inlineHelpText>Face to face is a physical meeting. Virtual meeting is via Skype-, Video- and Telephone Conferences.</inlineHelpText>
        <label>Visit Method</label>
        <picklist>
            <picklistValues>
                <fullName>Face to face meeting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual meeting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <description>Picklist created as part of R5-2538 to provide users with the ability to differentiate between internal events and external events (involving client contacts) when setting up an event in SFDC.</description>
        <inlineHelpText>External include non ABB accounts, channel partners &amp; agencies. Internal being ABB accounts we are selling to or supporting as a customer.</inlineHelpText>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>External meeting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal meeting</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Visit_Reports__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Visit Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Visit Report</label>
    <listViews>
        <fullName>AllVisitReports</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location__c</columns>
        <columns>Confidential__c</columns>
        <columns>Date_of_Visit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Visit Reports</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyVisitReports</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location__c</columns>
        <columns>Confidential__c</columns>
        <columns>Date_of_Visit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Visit Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Visit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ChannelBusReview_ClosedCheck_VisitReport</fullName>
        <active>true</active>
        <description>R5 - If Channel Business review Status is Obsolete, then the user should not edit the visit report record</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
OR(ISPICKVAL(  Channel_Review__r.Status__c  , &apos;Obsolete&apos;), 
ISPICKVAL( Channel_Review__r.Status__c , &apos;Completed&apos;)))</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Review is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChannelPreQual_VisitReport_CloseCheck</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Pre Qualification Status is Obsolete/Declined/Completed, then the user should not edit the Visit report record</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
OR( ISPICKVAL( Channel_Pre_Qualification__r.Status__c , &apos;Obsolete&apos;), ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Declined&apos;),
ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Completed&apos;) ))</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Pre Qualification is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Visit_On_Inactive_Bulk_Accounts</fullName>
        <active>true</active>
        <description>No Visit Reports On Inactive, Bulk Business Accounts</description>
        <errorConditionFormula>OR 
(
    (IF	
	   (AND(NOT($User.AccountMerge_Override__c), 
	    Account__r.RecordType.Name = &quot;Read Only&quot;,
	    NOT($Setup.Validation_Override__c.Exclude__c),
	    ISNEW()), True, False)
    ),
    (IF (CONTAINS( Account__r.Name , &quot;Bulk Business&quot;), True,False))   
)</errorConditionFormula>
        <errorMessage>You can not create a new Visit Report on an Account that is set to Inactive or is a Bulk Business.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_the_changes_in_Year</fullName>
        <active>true</active>
        <description>R6</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),($User.Id != OwnerId &amp;&amp; $Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;Global UAM Admin&apos; &amp;&amp; $Profile.Name != &apos;ABB Basic Admin&apos;),
(YEAR( DATEVALUE(Start_Date__c) ) !=  PRIORVALUE(Start_Date_Year__c ) || 
YEAR( DATEVALUE(End_Date__c) ) !=  PRIORVALUE(End_Date_Year__c)))</errorConditionFormula>
        <errorMessage>You can&apos;t change the Year of Start Date Time / End Date Time after creation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDate_Cannot_be_greater_than_EndDate</fullName>
        <active>true</active>
        <description>R6 - Created as part of WorkId - 349 - Start Date cannot be bigger than the end Date</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),Start_Date__c &gt;  End_Date__c)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Start date should be less than or equal to End date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Report_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Visit Report.</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;))</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>